--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 * {
-  margin: 0;
+  margin: 5px;
   padding: 0;
   box-sizing: border-box;
   font-family: "Lato", sans-serif;
@@ -36,16 +36,17 @@ body {
     url(./images/cooks.jpg);
   background-size: cover;
   background-position: top;
+  border-radius: 10px 10px 0px 0px;
 }
 
 .logo {
-  width: 100px;
+  width: 85px;
 }
 
 .logo-box {
   position: absolute;
-  top: 20px;
-  left: 40px;
+  top: 10px;
+  left: 10px;
 }
 
 .text-box {
@@ -118,4 +119,57 @@ body {
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 100px;
+  transition: all .2s;
+  position: relative;
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .5);
+}
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, .5);
+}
+
+.btn-pink {
+  background-color: var(--main-text-color);
+  color: var(--main-bg-color);
+}
+
+.btn::after {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+}
+
+.btn-pink::after {
+  background-color: var(--main-text-color);
+}
+
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn-animated {
+  animation: moveInBottom .5s ease-out .75s;
+  animation-fill-mode: backwards;
 }
