--- a/style.css
+++ b/style.css
@@ -17,12 +17,19 @@
 * {
   margin: 5px;
   padding: 0;
-  box-sizing: border-box;
-  font-family: "Lato", sans-serif;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 body {
+  font-family: "Lato", sans-serif;
   background-color: var(--main-bg-color);
+  line-height: 1.7;
+  padding: 3rem;
+  box-sizing: border-box;
 }
 
 .header {
@@ -36,17 +43,17 @@ body {
     url(./images/cooks.jpg);
   background-size: cover;
   background-position: top;
-  border-radius: 10px 10px 0px 0px;
+  border-radius: 1rem 1rem 0 0;
 }
 
 .logo {
-  width: 85px;
+  width: 8.5rem;
 }
 
 .logo-box {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 1rem;
+  left: 1rem;
 }
 
 .text-box {
@@ -61,33 +68,33 @@ body {
   color: var(--main-text-color);
   text-transform: uppercase;
   backface-visibility: hidden;
-  margin-bottom: 60px;
+  margin-bottom: 6rem;
 }
 
 .heading-primary-main {
   display: block;
-  font-size: 2.5em;
+  font-size: 6rem;
   font-weight: 400;
-  letter-spacing: 35px;
+  letter-spacing: 3.5rem;
   animation: moveInLeft 1s linear;
 }
 
 .heading-primary-sub {
   display: block;
-  font-size: 1.5em;
+  font-size: 7rem;
   font-weight: 700;
-  letter-spacing: 18px;
+  letter-spacing: 1.8rem;
   animation: moveInRight 1s linear;
 }
 
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateX(-10rem);
   }
 
   80% {
-    transform: translateX(10px);
+    transform: translateX(1rem);
   }
 
   100% {
@@ -98,11 +105,11 @@ body {
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(100px);
+    transform: translateX(10rem);
   }
 
   80% {
-    transform: translateX(-10px);
+    transform: translateX(-1rem);
   }
 
   100% {
@@ -113,7 +120,7 @@ body {
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(30px);
+    transform: translateY(3rem);
   }
   100% {
     opacity: 1;
@@ -125,21 +132,22 @@ body {
 .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
-  padding: 15px 40px;
+  padding: 1.5rem 4rem;
   display: inline-block;
-  border-radius: 100px;
+  border-radius: 10rem;
   transition: all .2s;
   position: relative;
+  font-size: 1.6rem;
 }
 
 .btn:hover {
   transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, .5);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, .5);
 }
 
 .btn:active {
   transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, .5);
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .5);
 }
 
 .btn-pink {
@@ -152,7 +160,7 @@ body {
   display: inline-block;
   height: 100%;
   width: 100%;
-  border-radius: 100px;
+  border-radius: 10rem;
   position: absolute;
   top: 0;
   left: 0;
