--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 *::after,
 *::before {
   margin: 0px;
-  padding: 0;
+  padding: 0px;
   box-sizing: inherit;
 }
 
@@ -33,13 +33,13 @@ body {
   font-family: "Lato", sans-serif;
   background-color: var(--main-bg-color);
   line-height: 1.7;
-  padding: 3rem;
+  padding: 2rem;
   box-sizing: border-box;
 }
 
 .header {
   position: relative;
-  height: 60vh;
+  height: 80vh;
   background-image: linear-gradient(
       to right bottom,
       rgba(55, 55, 55, 0.1),
@@ -59,6 +59,7 @@ body {
   position: relative;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin: 1rem;
   top: 1rem;
   left: 1rem;
@@ -166,7 +167,6 @@ body {
 .btn-blue {
   background-color: var(--btn-color);
   color: var(--secondary-text-color);
-  width: 95%;
 }
 
 .btn::after {
@@ -208,20 +208,22 @@ a {
   color: var(--main-text-color);
   text-decoration: none;
 }
+
 /* First section */
 .s1 {
   background-color: var(--main-text-color);
-  padding: 2rem;
+  padding: 4rem;
 }
 
 .section-container {
   color: var(--secondary-text-color);
   display: grid;
-  grid-template-columns: 2fr 2fr;
+  align-content: center;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
   justify-items: center;
   text-align: left;
   position: relative;
-  padding: 4rem;
 }
 
 .section-container-main {
@@ -241,12 +243,15 @@ a {
 .section-container-logo {
   width: 25em;
 }
+
 /* section section */
+
 .s2 {
+  background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: white;
+  padding: 2rem;
 }
 
 .card {
@@ -307,4 +312,407 @@ a {
 .card-description > p {
   font-size: 2rem;
   padding-left: 1rem;
+}
+
+/* section three */
+
+.s3 {
+  position: relative;
+  height: 35vh;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(55, 55, 55, 0.1),
+      rgba(0, 0, 0, 0.4)
+    ),
+    url(./images/pratiksha-mohanty-SxHxyNx-6YI-unsplash.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.s3 p {
+  font-size: 2rem;
+}
+
+.img-container > h1 {
+  color: white;
+  font-size: 4rem;
+}
+
+.img-container > a {
+  color: white;
+  border-radius: 20rem;
+  background-color: var(--secondary-text-color);
+  margin: 0;
+  margin-top: 5rem;
+  padding: 1em 2rem;
+  font-size: 1.4rem;
+}
+
+/* FOOTER */
+.footer {
+  background-color: var(--secondary-text-color);
+  padding: 7rem;
+  border-radius: 0 0 1rem 1rem;
+}
+
+.footer-col {
+  padding: 0 1.5rem;
+}
+
+.footer-col h4 {
+  font-size: 1.8rem;
+  color: #fff;
+  margin-bottom: 3.5rem;
+  font-weight: 500;
+  position: relative;
+}
+
+.footer-col h4::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  background-color: var(--main-text-color);
+  height: 2px;
+  box-sizing: border-box;
+  width: 5rem;
+}
+
+.footer-col ul li:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.footer-col ul li a {
+  font-size: 1.5rem;
+  font-family: sans-serif;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 300;
+  color: rgb(230, 230, 230);
+  display: block;
+  transition: all 0.3s ease;
+}
+
+.footer-col ul li a:hover {
+  color: #fff;
+  padding-left: 1rem;
+}
+
+.footer-col .social-links a {
+  display: inline-block;
+  height: 4rem;
+  width: 4rem;
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 4rem;
+  border-radius: 50%;
+  color: #fff;
+  transition: all 0.5s ease;
+}
+
+.footer-col .social-links a:hover {
+  color: #fff;
+}
+
+.footer-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.open-hours {
+  padding: 0.2rem;
+}
+
+/* Media Queries Start Page */
+
+@media (max-width: 100em) {
+  .heading-primary-main,
+  .heading-primary-sub {
+    font-size: 4rem;
+    letter-spacing: 1.5rem;
+  }
+
+  .section-container-main {
+    display: inline-block;
+    font-size: 4rem;
+    letter-spacing: 0;
+  }
+  .section-container-sub {
+    display: inline-block;
+    font-size: 2rem;
+    letter-spacing: 0;
+  }
+  .section-container-logo {
+    display: inline-block;
+    width: 10rem;
+  }
+
+  .card {
+    max-width: 25rem;
+  }
+
+  .s3 > .btn:visited,
+  .btn:link {
+    padding: 1rem 2rem;
+    font-size: 1.2rem;
+  }
+}
+
+@media (max-width: 40em) {
+  .header {
+    height: 50vh;
+  }
+
+  .s3 {
+    grid-template-columns: 1fr auto;
+    padding: 2rem;
+  }
+
+  .nav {
+    display: none;
+  }
+  .logo {
+    width: 4rem;
+  }
+  .heading-primary-main,
+  .heading-primary-sub {
+    font-size: 2rem;
+    letter-spacing: 0;
+  }
+
+  .section-container-main {
+    display: inline-block;
+    font-size: 2rem;
+    letter-spacing: 0;
+  }
+  .section-container-sub {
+    display: inline-block;
+    font-size: 1rem;
+    letter-spacing: 0;
+  }
+  .section-container-logo {
+    display: inline-block;
+    width: 5rem;
+  }
+
+  .img-container > h1 {
+    font-size: 2rem;
+  }
+
+  .btn:link {
+    padding: 1.5rem 1rem;
+    font-size: 1rem;
+  }
+
+  .row {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* Grid portfolio */
+.container {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: 100px 300px;
+  grid-gap: 5px;
+  grid-auto-flow: dense;
+}
+
+.gallery-item {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.gallery-item .image {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.gallery-item .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50% 50%;
+  cursor: pointer;
+  transition: 0.5s ease-in-out;
+}
+
+.gallery-item:hover .image img {
+  transform: scale(1.5);
+}
+
+.gallery-item .image-title {
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 2.5rem;
+  pointer-events: none;
+  z-index: 4;
+  transition: 0.3s ease-in-out;
+  text-align: center;
+  -webkit-backdrop-filter: blue(5px), saturate(1.5);
+  backdrop-filter: blue(5px) saturate(1.5);
+}
+
+.gallery-item:hover .image-title {
+  opacity: 1;
+  animation: move-down 0.3s linear;
+  padding: 1em;
+  width: 100%;
+  /* outline: 2px solid red; */
+}
+
+.w-1 {
+  grid-column: span 1;
+}
+
+.w-2 {
+  grid-column: span 2;
+}
+
+.w-3 {
+  grid-column: span 3;
+}
+
+.w-4 {
+  grid-column: span 4;
+}
+
+.w-5 {
+  grid-column: span 5;
+}
+
+.w-6 {
+  grid-column: span 6;
+}
+
+.h-1 {
+  grid-row: span 1;
+}
+.h-2 {
+  grid-row: span 2;
+}
+.h-3 {
+  grid-row: span 3;
+}
+.h-4 {
+  grid-row: span 4;
+}
+.h-5 {
+  grid-row: span 5;
+}
+.h-6 {
+  grid-row: span 6;
+}
+
+@keyframes move-down {
+  0% {
+    top: 10%;
+  }
+  50% {
+    top: 35%;
+  }
+  100% {
+    top: 50%;
+  }
+}
+
+@media screen and (max-width: 40em) {
+  .container {
+    display: block;
+  }
+}
+
+/* Contact page */
+
+.contact-container {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--secondary-bg-color);
+}
+
+.contact-container h1 {
+  color: #333;
+  text-transform: uppercase;
+  font-size: 2.5rem;
+  letter-spacing: 0.5rem;
+  font-weight: 600;
+}
+
+.contact-container p {
+  color: var(--secondary-text-color);
+  font-size: 1.5rem;
+  letter-spacing: 0.5rem;
+  font-weight: 400;
+}
+
+.contact-container label {
+  font-size: 1.5rem;
+  font-weight: 400;
+  letter-spacing: 0.2rem;
+}
+
+.left-col {
+  width: 50vw;
+  height: 100vh;
+  background-image: url(images/brownie.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.right-col {
+  width: 50vw;
+  padding: 5rem 3.5rem;
+}
+
+.right-col form {
+  width: 32rem;
+  position: relative;
+  margin-top: 2rem;
+  padding: 1rem 0;
+}
+
+.right-col input,
+textarea,
+label {
+  width: 40vw;
+  display: block;
+}
+
+.right-col input,
+textarea {
+  color: #333;
+  font-weight: 500;
+  background-color: transparent;
+  border: none;
+  border-bottom: 1px solid var(--secondary-text-color);
+  padding: 1rem 0;
+  margin-bottom: 1rem;
+  outline: none;
+}
+
+.right-col button {
+  text-transform: uppercase;
+  font-weight: 400;
+  background-color: var(--secondary-text-color);
+  color: #fff;
+  width: 15rem;
+  height: 5rem;
+  border: none;
+  border-radius: 1px;
+  outline: none;
+  cursor: pointer;
+  letter-spacing: 0.5rem;
+  margin-top: 2rem;
 }
