--- a/style.css
+++ b/style.css
@@ -635,9 +635,15 @@ a {
 
 /* Contact page */
 
+input,
+label,
+textarea {
+  display: block;
+}
+
 .contact-container {
   display: flex;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: var(--secondary-bg-color);
 }
@@ -672,15 +678,19 @@ a {
 }
 
 .right-col {
-  width: 50vw;
+  width: 45vw;
   padding: 5rem 3.5rem;
 }
 
 .right-col form {
-  width: 32rem;
   position: relative;
+  width: 32rem;
   margin-top: 2rem;
   padding: 1rem 0;
+}
+
+.right-col textarea {
+  resize: vertical;
 }
 
 .right-col input,
