--- a/style.css
+++ b/style.css
@@ -200,13 +200,14 @@ body {
   font-size: 2.5rem;
 }
 
-.nav ul,
+.nav > ul,
 li,
 a {
   display: inline-block;
   margin: 1rem;
-  color: var(--main-text-color);
+  color: var(--btn-color);
   text-decoration: none;
+  text-transform: capitalize;
 }
 
 /* First section */
@@ -219,7 +220,7 @@ a {
   color: var(--secondary-text-color);
   display: grid;
   align-content: center;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
   gap: 1rem;
   justify-items: center;
   text-align: left;
@@ -237,7 +238,7 @@ a {
   display: block;
   font-size: 2.5rem;
   font-weight: 400;
-  letter-spacing: 1rem;
+  letter-spacing: 0.5rem;
 }
 
 .section-container-logo {
@@ -324,7 +325,7 @@ a {
       rgba(55, 55, 55, 0.1),
       rgba(0, 0, 0, 0.4)
     ),
-    url(./images/pratiksha-mohanty-SxHxyNx-6YI-unsplash.jpg);
+    url(./images/birthday.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -385,7 +386,6 @@ a {
 .footer-col ul li a {
   font-size: 1.5rem;
   font-family: sans-serif;
-  color: #fff;
   text-decoration: none;
   font-weight: 300;
   color: rgb(230, 230, 230);
@@ -417,6 +417,10 @@ a {
 .footer-list {
   display: flex;
   flex-direction: column;
+}
+
+.footer-list li {
+  margin: 1rem 0;
 }
 
 .row {
@@ -560,8 +564,8 @@ a {
   z-index: 4;
   transition: 0.3s ease-in-out;
   text-align: center;
-  -webkit-backdrop-filter: blue(5px), saturate(1.5);
-  backdrop-filter: blue(5px) saturate(1.5);
+  -webkit-backdrop-filter: blur(5px) saturate(1.5);
+  backdrop-filter: blur(5px) saturate(1.5);
 }
 
 .gallery-item:hover .image-title {
@@ -644,7 +648,7 @@ textarea {
 .contact-container {
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   background-color: var(--secondary-bg-color);
 }
 
@@ -671,7 +675,7 @@ textarea {
 
 .left-col {
   width: 50vw;
-  height: 100vh;
+  height: 80vh;
   background-image: url(images/brownie.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -725,4 +729,22 @@ textarea {
   cursor: pointer;
   letter-spacing: 0.5rem;
   margin-top: 2rem;
+}
+
+/* FAQ */
+.s4 {
+  background-color: var(--secondary-bg-color);
+  padding: 4rem;
+}
+
+.s5 {
+  background-color: var(--btn-color);
+  padding: 4rem;
+}
+.GR-1 {
+  grid-column: 1 / 2;
+}
+
+.GR-2 {
+  grid-column: 2 / 2;
 }
