--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ body {
   box-sizing: border-box;
 }
 
+/* index */
+
 .header {
   position: relative;
   height: 80vh;
@@ -248,7 +250,7 @@ a {
 /* section section */
 
 .s2 {
-  background-color: white;
+  background-color: var(--btn-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -265,26 +267,28 @@ a {
   text-decoration: none;
   overflow: hidden;
   width: 100%;
-  background-color: white;
+  background-color: #fff;
 }
 
 .card-image {
   background-size: cover;
   display: block;
-  max-height: 60rem;
-  padding: 1rem;
 }
 
 .card-image > img {
-  border-radius: 2rem;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
   display: block;
   width: 100%;
+  max-height: 60rem;
+  aspect-ratio: 0.5;
+  object-fit: cover;
+  object-position: center;
 }
 
 .card-list {
   display: block;
   margin: 1rem auto;
+  width: 100%;
   padding: 0;
   font-size: 0;
   text-align: center;
@@ -334,7 +338,7 @@ a {
   font-size: 2rem;
 }
 
-.img-container > h1 {
+.img-container > h3 {
   color: white;
   font-size: 4rem;
 }
@@ -519,6 +523,7 @@ a {
 }
 
 /* Grid portfolio */
+
 .container {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -573,7 +578,6 @@ a {
   animation: move-down 0.3s linear;
   padding: 1em;
   width: 100%;
-  /* outline: 2px solid red; */
 }
 
 .w-1 {
