--- a/style.css
+++ b/style.css
@@ -280,7 +280,7 @@ a {
   display: block;
   width: 100%;
   max-height: 60rem;
-  aspect-ratio: 0.5;
+  aspect-ratio: 1 / 2;
   object-fit: cover;
   object-position: center;
 }
